--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2800,6 +2800,8 @@
  BUL_the_macedonian_question_desc:0 "In Macedonia, there are many Bulgarians who must be liberated however, Serbia claims that the land is rightfully theirs too. This is a major problem in our alliance that we must sort out or the alliance could fail and our lands never liberated."
  BUL_lone_liberator:0 "Lone Liberator"
  BUL_lone_liberator_desc:0 "The formation of a Balkan alliance has failed after disputes over Macedonia. Even without an alliance the Balkans still must be liberated. By ourselves, we shall restore the Greater Bulgarian border of the Treaty of San Stefano by our hands!"
+ BUL_lone_victor:0 "Lone Victor"
+ BUL_lone_victor_desc:0 ""
  BUL_buy_weapons:0 "Liberty Guns Act"
  BUL_buy_weapons_desc:0 "Our industry is too weak to fund a war against the Ottomans ourselves, we must find another way to get equipment. We can turn to the Great Powers to purchase equipment from to prepare a fight against the Ottomans."
  BUL_seek_rapprochement_with_auh:0 "Rapprochement With [AUH.getName]"
