--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1412,8 +1412,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  leave_the_coalition:0 "Leave the Conference"
  dissolve_the_coalition:0 "End the Conference"
  coalition_send_rifles:0 "Support [FROM.GetNameDef]"
- balkan_league_fail:0 "Balkan League Formation Failed"
- balkan_league_success:0 "Balkan League Formation Successful"
+ balkan_league_fail:0 "§5The Balkan League§! has failed to form"
+ balkan_league_success:0 "§5The Balkan League§! has formed"
  
  ROM_balkan_war_intervention_decision:0 "Intervention in Balkan War"
  ROM_great_war_intervention:0 "Join the Great War"
@@ -8563,6 +8563,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  BUL_non_aggression_TUR_desc:0 "If we want to focus on fighting other enemies instead of the Ottomans in the Great War, we must make peace with them."
  BUL_request_200:0 "Request [200.GetName]"
  BUL_request_200_desc:0 "Yummy, yummy, territory!"
+ lone_liberator_victorious:0 "§Y[BUL.GetFlag]Bulgaria§! has victorious in the Balkan War without forming §5the Balkan League§!"
  
  korean_independence:0 "Korean Independence"
  KOR_release_korea:0 "Release Korea"
