--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1050,6 +1050,7 @@
  TUR_committee_member_7_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%§!"
  TUR_ottoman_4th_army:0 "Ottoman 4th Army"
  TUR_ottoman_4th_army_desc:0 "When our commandeer Cemal Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the Ottoman Fourth Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
+ TUR_ottoman_4th_army_tt:0 "[TUR_o4a_battalion_limit]"
  TUR_low_arab_opposition:0 "Arab Opposition"
  TUR_low_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though for most of the history of our empire the Arab population has not given any hardship with ruling these lands, the sustainment of their loyalty is not guaranteed. As Cemal Paşa is also set out to implement several reforms to centralize these vilayets, Arabs start to show their opposition in different scales."
  TUR_sectarian_issues:0 "Sectarian Issues"
