--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8290,7 +8290,7 @@ USA_an_assertive_president:0 "Bulwark of the Progressive Movement"
 USA_firmly_progressive:0 "§SFirmly Progressive§!"
 USA_not_firmly_progressive:0 "The administration is §Rnot§! §SFirmly Progressive§!"
 bank.tt:0 "For every level of §nCongressional Tolerance§!, stacking up to §C5§! times, this focus will take away §Y20§! less £pol_power §YPolitical Power§!"
-resipo.tt:0 "Several §YEconomic and Domestic Focuses§! will begin giving us £pol_power Political Power§!"
+resipo.tt:0 "Several §YEconomic and Domestic Focuses§! will begin giving us £GFX_stability_texticon Stability"
 must_lean_firm.tt:0 "The administration is currently §SFirmly Progressive§!"
 usa_nigbalp.tt:0 "These decisions will §Ggive§! £pol_power §YPolitical Power§!, but give slightly §Rless§! resources then the focus §YResource Development Department§!"
 usa_nigbealp.tt:0 "These decisions will §Rcost§! £pol_power §YPolitical Power§!, but give slightly §Gmore§! resources then the focus §YLease Land to Private Companies§!"
@@ -8402,8 +8402,9 @@ USA_mississippi_textiles:0 "Improve Mississippi Textiles"
 #clark 
 USA_discredit_the_obstructionists:0 "Discredit the Obstructionists"
 USA_discredit_the_obstructionists_desc:0 "Talks of conservative domestic agenda has been stopped dead in the water by progressive opposition. Thus, before we attempt to implement our more conservative agenda, we must crush the progressive majority in congress. Let's smear the progressives as obstructionsist who oppose our centrist agenda."
-USA_clark_defeat_progressives:0 "Defanging the Progressive Movement"
-USA_clark_defeat_progressives_desc:0 "As it current stands, there are too many §SProgressives§! in the United States congress for us to pass our §cConservative§! agenda. We will have to do whatever we can to discredit the progressive movement enough that they suffer huge losses in the 1914 midterms.\n\nThe current percent of congress that aligns with §SProgressive§! views is §Y67%§!, while polls show progressive canidates will hold §Y[?USA_clark_progressive_support]%§! of congressional seats in both chambers after the 1914 elections are concluded.\n\nOur entire presidency will be decided by the results of these elections, so we must ensure we do well. If we can atleast get the progressives below 50%, we will be able to pass most of our agenda. If we can outperform expectations and secure a 2/3rds majority, however, then several §Gadditional§! focuses will be unlocked."
+USA_clark_defeat_progressives:0 "Democratic Factionalism"
+USA_clark_defeat_progressives_desc:0 "The §1Democratic Party§! is a big tent party with many diverse views inside of it. Ranging from staunch §Sprogressives§! to hardline §cconservatives§!. While clark leans more to the §cright§!, completly ignoring progressive concerns may lead to a §Rcollapse§! of the party. Therefore, Clark will have to mantain party unity and ensure the §1Democrats§! are atleast somewhat united before making divisive decisions."
+auosswr:0 "Several domesic focuses will now grant us §YStability§!"
 ww1_USA_clark.1.t:0 "A Vote for Conservatives is a Vote for a Functional Government"
 ww1_USA_clark.1.d:0 "Clark and the current majority of combined progressive Democrats and Republicans will never be able to govern properly. The progressives have made it clear that they will not compromise with Clark, and thus are unsuitable for governance during Clarks presidency.\n\nClarks allies have been intensifying this message of an obstructionist congress as of late in an attempt to sway voters in the next midterms. While a lot of voters are in favor of progressive reforms, playing on the narritive that progressives are simply refusing any sort of reasonable compromises will hopefully make voters think twice about their support."
  USA_neutrality_with_a_spine:0 "Neutrality With a Spine"
