--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4950,6 +4950,9 @@ USA_register_lobbyists:0 "Register Lobbyists"
  AUH_expand_the_UFAG:0 "Expand the UFAG"
  AUH_expand_the_UFAG_desc:0 "We cannot make planes out of thin air! Before we start assembling aircraft, we must kickstart our aviation industry."
  AUH_F48P_victory:0 "F48P Victory"
+USA_enforce_party_whip:0 "Intensify Use of Party Whip"
+USA_enforce_whip:0 "Enforce the Whip"
+modify_dem_unity5:0 "Modify §1Democratic Unity§! by: §G+5§!"
  AUH_promote_independence:0 "Promote Statehood"
  AUH_radicalize_the_front:0 "Radicalize the Front"
  AUH_crack_the_reserves:0 "Crack the Reserves"
