--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -959,7 +959,7 @@
  TUR_naval_blockade_instant_desc:0 "§RIf estimated enemies strength ratio of 50% or less compared to our navy, this idea will be removed§!"
  TUR_balkan_pact_initiative:0 "Initiative of the Balkan Entente"
  TUR_islamic_army:0 "Islamic Army"
- TUR_islamic_army_tt:0 "When §Yat war§! with a §YMajor Power§!:\n£manpower_texticonWeekly Manpower: §G+150§!\n£attack_texticon  Attack against major countries: §G+15.0%§!\n£defence_texticon  Defense against major countries: §G+15.0%§!\n"
+ TUR_islamic_army_tt:0 "When §Yat war§! with a §YMajor Power§!:\n£manpower_texticon  Weekly Manpower: §G+150§!\n£attack_texticon  Attack against major countries: §G+15.0%§!\n£defence_texticon  Defense against major countries: §G+15.0%§!\n"
  TUR_ottoman_staff:0 "Ottoman Staff"
  TUR_german_military_command:0 "German Military Command"
  TUR_gendarmerie:0 "Ottoman Gendarmerie"
@@ -1051,8 +1051,10 @@
  TUR_ottoman_4th_army:0 "Ottoman 4th Army"
  TUR_ottoman_4th_army_desc:0 "When our commandeer Cemal Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the Ottoman Fourth Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
  TUR_ottoman_4th_army_tt:0 "[TUR_o4a_battalion_limit]"
- TUR_low_arab_opposition:0 "Arab Opposition"
- TUR_low_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though for most of the history of our empire the Arab population has not given any hardship with ruling these lands, the sustainment of their loyalty is not guaranteed. As Cemal Paşa is also set out to implement several reforms to centralize these vilayets, Arabs start to show their opposition in different scales."
+ TUR_crushed_arab_opposition:0 "Crushed Arab Opposition"
+ TUR_crushed_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though Cemal Paşa's reforms in the region is perceived to be unpopular by the local population, we've managed to effectively crush the opposition to our rule."
+ TUR_arab_opposition:0 "Arab Opposition"
+ TUR_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though for most of the history of our empire the Arab population has not given any hardship with ruling these lands, the sustainment of their loyalty is not guaranteed. As Cemal Paşa is also set out to implement several reforms to centralize these vilayets, Arabs start to show their opposition in different scales."
  TUR_sectarian_issues:0 "Sectarian Issues"
  TUR_sectarian_issues_desc:0 "Syria encompasses many non-Muslim faiths within itself. Christians, Jews, Druze and alikes reside within the empire. Yet their effects on our empire, good or bad, are open for discussion."
 
