--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2449,10 +2449,22 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_disband_prisoner_conscripts:0 "Disband Prisoner Conscripts"
  TUR_disband_prisoner_conscripts_desc:0 "Prisoner Conscripts have proven to be greater of a burden that they're a benefit to us. The only logical action would be to disband them."
  TUR_disband_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: [TUR_recruit_prisoner_conscripts_in_middle_east|=2%+]\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: [TUR_recruit_prisoner_conscripts_in_middle_east|=2%+]\n"
+ TUR_nationalize_greek_businesses:0 "Nationalize Greek Businesses in [FROM.GetName]"
+ TUR_nationalize_greek_businesses_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
+ TUR_nationalize_greek_businesses_tt:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
  TUR_deport_greeks:0 "Deport Greeks in [FROM.GetName]"
  TUR_deport_greeks_desc:0 "There are several towns and villages that accompany a large Greek population in [FROM.GetName]. By deporting them and giving their properties to Muslims, we can create an ethnically homogenious society."
+ TUR_increased_pressure_on_bulgarians:0 "Increase Pressure on Bulgarians in [FROM.GetName]"
+ TUR_increased_pressure_on_bulgarians_desc:0 "As their nation state has recently gained their independence, many Bulgarians within our empire fervor with uniting with their main country. As this results in a need for more garrisons in the region, we'll combat and increase pressure on such thoughts and sentiments."
+ TUR_increased_pressure_on_bulgarians_tt:0 "Modify [TUR_get_state_minority] by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n"
+ TUR_increased_pressure_on_serbs:0 "Increase Pressure on Serbs in [FROM.GetName]"
+ TUR_increased_pressure_on_serbs:0 "As their nation state has recently gained their independence, many Serbs within our empire fervor with uniting with their main country. As this results in a need for more garrisons in the region, we'll combat and increase pressure on such thoughts and sentiments."
  TUR_destroy_bulgarians:0 "Destroy Bulgarians in [FROM.GetName]"
  TUR_destroy_bulgarians_desc:0 "There are several towns and villages that accompany a large Bulgarian population in [FROM.GetName]. By destroying their existance in the state, we can create an ethnically homogenious society."
+ TUR_clash_against_armenian_gangs:0 "Clash Against Armenian Gangs in [FROM.GetName]"
+ TUR_clash_against_armenian_gangs_desc:0 "Armenian gangs have been taking up arms in order to defend themselves ever since the tyranical rule of Abdulhamid II. Though their situation is improving, their habit of takign up arms still remain. We must combat against these groups to secure state authority."
+ TUR_clash_against_armenian_gangs_tt:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
+ TUR_clash_against_armenian_gangs_tt2:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n"
  TUR_exterminate_armenians:0 "Exterminate Armenians in [FROM.GetName]"
  TUR_exterminate_armenians_desc:0 "There are several towns and villages that accompany a large Armenian population in [FROM.GetName]. By marching them through desert while effectively decreasing their numbers, we can create an ethnically homogenious society."
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
