decisions for armenian crisis

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -584,3 +584,21 @@ armenian_reforms_crisis_German_claim:0 "§Y[GER.getFlag][GER.getName]§!  wants 
 armenian_reforms_crisis_name_wargoal:0 "Armenian reforms Crisis "
 armenian_reforms_alert:0 "Armenian reforms crisis alert"
 armenian_reforms_crisis_alert_tt:0 "§RThe Armenian reforms crisis§! begins, opposing §Y[RUS.getFlag][RUS.getAdjective]§! claims for reparations toward §Y[GER.getFlag][GER.getName]§!."
+
+#Armenian reforms decision
+
+RUS_armenian_reforms_crisis_decision_category: "Armenian Reforms"
+armenian_reforms_crisis: "Armenian Reforms Crisis"
+RUS_armenian_reforms_crisis_plus_500: "Diplomatic effort"
+RUS_armenian_reforms_crisis_plus_1500: "Show of force in Caucasus"
+RUS_armenian_reforms_crisis_plus_3000: "Support Armenian groups"
+GER_armenian_reforms_crisis_plus_1500: "Diplomatic effort"
+GER_armenian_reforms_crisis_plus_1000: "to show the superiority of powers"
+GER_armenian_reforms_crisis_plus_3000: "Support Turkish goverment"
+RUS_plus_30_tt: "§Y30%§! is added"
+RUS_plus_5_tt: "§Y5%§! is added"
+RUS_plus_15_tt: "§Y15%§! is added"
+RUS_plus_10_tt: "§Y10%§! is added"
+TUR_armenian_autonoums: "Armenian autonomy"
+TUR_puppet_mission: "implementation of Armenian reforms"
+TUR_puppet_decision: "Release Armenian autonomy"
