Fix and tweak rus releae decisions

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1130,18 +1130,18 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  RUS_annex_FROM:0 "Integrate [FROM.GetName]"
  RUS_release_country:0 "National Issue"
  RUS_release_country_desc:0 "The peripheral regions have long been opposed to central authority, and in recent years, thanks to socialists, separatist sentiments have become enormous. In the coming years, the threat of independence wars must be averted and the national issue resolved."
- RUS_release_FIN:0 "Release Finland"
- RUS_release_EST:0 "Release Estonia"
- RUS_release_LAT:0 "Release Latvia"
- RUS_release_LIT:0 "Release Lithuania"
- RUS_release_POL:0 "Release Poland"
- RUS_release_BLR:0 "Release Belarus"
- RUS_release_UKR:0 "Release Ukraine"
- RUS_release_GEO:0 "Release Georgia"
- RUS_release_ARM:0 "Release Armenia"
- RUS_release_AZR:0 "Release Azerbaijan"
- RUS_release_KAZ:0 "Release Kazakhs"
- RUS_release_TRK:0 "Release Turkestan"
+ RUS_release_FIN:0 "Release [FIN.GetFlag]Finland"
+ RUS_release_EST:0 "Release [EST.GetFlag]Estonia"
+ RUS_release_LAT:0 "Release [LAT.GetFlag]Latvia"
+ RUS_release_LIT:0 "Release [LIT.GetFlag]Lithuania"
+ RUS_release_POL:0 "Release [POL.GetFlag]Poland"
+ RUS_release_BLR:0 "Release [BLR.GetFlag]Belarus"
+ RUS_release_UKR:0 "Release [UKR.GetFlag]Ukraine"
+ RUS_release_GEO:0 "Release [GEO.GetFlag]Georgia"
+ RUS_release_ARM:0 "Release [ARM.GetFlag]Armenia"
+ RUS_release_AZR:0 "Release [AZR.GetFlag]Azerbaijan"
+ RUS_release_KAZ:0 "Release [KAZ.GetFlag]Kazakhs"
+ RUS_release_TRK:0 "Release [TRK.GetFlag]Turkestan"
  RUS_mission_self_determination_dummy:0 "War of Independence"
  RUS_mission_self_determination_dummy_tt:0 "Non-Russified regions of Poland, Finland, the Baltic, Caucasus, Central Asia will start a war of independence.\n"
  RUS_mission_self_determination_FIN:0 "Finnish Revolution"
