--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2426,6 +2426,14 @@ TUN_italian_minority:0 "Italian Minority"
  ww1_egypt.10.a: "Unexpected."
  ww1_egypt.10.b: "Toast to German-Egypt friendship!"
  german_protection_of_suez_canal: "German Protection of Suez Canal"
+ ww1_egypt.11.t: "Egypt Sues for Peace"
+ ww1_egypt.11.d: "The government of [FROM.GetLeader] requested truce giving up Sinai and the Suez Canal."
+ ww1_egypt.11.a: "We'll take it."
+ ww1_egypt.11.b: "Demand them total submission."
+ ww1_egypt.12.t: "The Ottomans Demand Subjugation"
+ ww1_egypt.12.d: "[FROM.Captial.GetCapitalVictoryPointName] government demands our total subjugation instead of land concessions."
+ ww1_egypt.12.a: "No choice..."
+ ww1_egypt.12.b: "Never!"
 
  ww1_ottoman.185.t: "Ottomans Demand the Return of Egypt"
  ww1_ottoman.185.d: "About 30 years ago, before the British invasion of Egypt, it was the Ottomans who claimed overlordship over the land spanning River Nile. Under the ruler of their new Absolute Monarch, Adbulhamid II, they returned to take what they consider rightfully their's. How shall we respond?"
