--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -241,10 +241,10 @@
  POR:0 "Portugal"
  POR_DEF:0 "Portugal"
  POR_ADJ:0 "Portuguese"
- POR_neutrality_DEF:0 "the Kingdom of Portugal"
- POR_democratic_DEF:0 "the Kingdom of Portugal"
+ POR_neutrality_DEF:0 "the Kingdom of Portugal and the Algarves"
+ POR_democratic_DEF:0 "the Kingdom of Portugal and the Algarves"
  POR_fascism:0 "Integralist Portugal"
- POR_fascism_DEF:0 "the Kingdom of Portugal"
+ POR_fascism_DEF:0 "the Kingdom of Portugal and the Algarves"
  POR_communism:0 "Portuguese Socialist Republic"
  POR_communism_DEF:0 "the Portuguese Socialist Republic"
  FIN_fascism:0 "Suomi"
