--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -506,3 +506,4 @@
  TUR_only_one_governor_of_jerusalem:0 "The government can only have one §YGovernor of Jerusalem§!."
  TUR_policy_executer:0 "Policy Executor"
  judicial_reformer:0 "Judicial Reformer"
+ TUR_uncrowned_king:0 "Uncrowned King"
