Tweak german victory interwar

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2814,8 +2814,11 @@
  BUL_claim_nis_desc:0 "Claim Niš"
  BUL_claim_dobruja:0 "Claim Dobruja"
  BUL_claim_dobruja_desc:0 "Its vital we retake Dobruja. Not only does it have a large Bulgarian population, the mouth of the Danube flows through it."
+ BUL_claim_salonika_tt:0 "§Y[BUL.GetFlag]Bulgaria§! will gain §Y[345.GetName]§! in the peace conference. If this focus is not completed or Greece has not surrender, we will not receive §Y[345.GetName]§!."
  BUL_claim_vardar_macedonia:0 "Claim Macedonia"
  BUL_claim_vardar_macedonia_desc:0 "An integral part of our nation, Macedonia is the crown jewel of Bulgarian irredentism. It must become part of the fatherland no matter the cost."
+ BUL_claim_salonika:0 "Claim Solun"
+ BUL_claim_salonika_desc:0 "The pearl of the Aegean and Western Thrace, Solun rightly belongs to Bulgaria. And no one dares to oppose it."
  BUL_join_central_powers:0 "Join Central Powers"
  BUL_join_central_powers_desc:0 "After Russia started favouring Belgrade over us and the Greco-Serb theft of Macedonia, it is only natural we join the Central Powers."
  BUL_join_entente:0 "Join Entente"
@@ -3985,6 +3988,7 @@
 
  AUH_balkan_expansion:0 "Balkan Expansion"
  AUH_balkan_expansion_desc:0 "With the successive defeats of the Ottoman Empire, a new door opened to the south for Austria-Hungary. In order to keep the local populations safe, we should take control of Serbia and Montenegro, two historically hostile states."
+ AUH_balkan_expansion_tt:0 "§Y[SER.GetFlag][MNT.GetFlag][BUL.GetFlag][ROM.GetFlag]Balkan countries§! that capitulated in the war will become our protectorates after the war.\n§Y[ROM.GetFlag]Romania§! and §Y[BUL.GetFlag]Bulgaria§! will not be included if we are in a faction with §Y[TUR.GetFlag]the Ottomans§!."
 
  AUH_improve_austrian_bulgarian_relations:0 "Improve Austro Bulgarian Relations"
  AUH_improve_austrian_bulgarian_relations_desc:0 "Now free, Bulgaria has become an ideal partner for our projects in the Balkans. The separatist and anti-Serbian position of [BUL.getLeader] can play to our advantage and opportunistic alliances should be formed."
