--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1323,9 +1323,14 @@
  JOR_democratic_party:0 "National Liberal Party"
  JOR_communism_party:0 "Jordanian Workers Society"
  
- EGY_communism_party:0 "al-Hizb al-Aishtirakiu al-Misriu"
- EGY_democratic_party:0 "Hizb al-Wafd"
- EGY_neutrality_party:0 "Al Usrah Al Alawiyya"
+ EGY_communism_party:0 "HAM"
+ EGY_communism_party_long:0 "al-Hizb al-Aishtirakiu al-Misriu"
+ EGY_democratic_party:0 "HW"
+ EGY_democratic_party_long:0 "Hizb al-Wafd"
+ EGY_neutrality_party:0 "UA"
+ EGY_neutrality_party_long:0 "al-Usrah al-Alawiyya"
+ EGY_fascism_party:0 "HW"
+ EGY_fascism_party_long:0 "al-Hizb al-Watani"
  
  PAL_democratic_party:0 "Muslim-Christian Society"
  PAL_democratic_party_long:0 "Jerusalem Muslim-Christian Society"
