--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2662,6 +2662,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_black_sea_raid_mission:0 "Black Sea Raid"
  TUR_black_sea_raid_mission_desc:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
  RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
+ 
+ TUR_has_arab_opposition:0 "Has national spirit §YArab Opposition§!"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
