--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4458,6 +4458,16 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.125.d:0 "Since 1430, Albanians lands have been positioned under the Ottoman rule. During this time, Albania went through Turkification and Islamization in order to create loyalty in the Balkans. Yet in the last few decades, Orthodox, Catholic and Muslim alike, Albanians across the empire has been revolting.\nAs last of our few revolts have been a success, the Ottoman government finally agreed to our demands to form an autonomous Albanian vilayet. By uniting four large Albanian populated vilayets; Kosovo Vilayet, Scutari Vilayet, Manastir Vilayet and Janina Vilayet; a united autonomous Albanian vilayet is being planned to be established. With this vilayet, Albanians under the Ottoman empire will have a large autonomous and right to self rule, inlucing education in Albanian language and further acceptance of the Albanian culture."
  ottoman.125.a:0 "Matters of the empire has priority over Albania."
  ottoman.125.b:0 "Our struggle finally bearing its fruits."
+ ottoman.126.t:0 "Unintended Consequences"
+ ottoman.126.d:0 "Due to the recent attempt to hinder their influence, Christians started to lose their economical hegemony over the region. This resulted in the weakening of centuries old trade infrastructures and markets, and even caused unemployment."
+ ottoman.126.a:0 "So far with national economy."
+
+ ottoman_syria.1.t:0 "Cemal Mersinli to Syria"
+ ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Cemal Mersinli Paşa will be appointed to Syria."
+ ottoman_syria.1.a:0 "Safe trips Paşam."
+ ottoman_syria.2.t:0 "Return of Zeki Paşa"
+ ottoman_syria.2.d:0 "From the very beginning of his appointment to Syria to organize locals troop recruitment, Zeki Paşa has been objecting for an operation to attack the Suez Canal. As Cemal Paşa's plans to not only plan an offensive against the canal, but to conquer the entiriy of Egypt, Zeki Paşa has resigned from his duties in Syria."
+ ottoman_syria.2.a:0 "He shall be appointed elsewhere."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
