--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4493,6 +4493,7 @@
  TUR_tribal_light_cavalry_regiments:0 "Tribal Light Cavalry Regiments"
  TUR_tribal_light_cavalry_regiments_desc:0 "Hamidiye was the collective name given to tribal cavalry regiments formed with the intention of patrolling our eastern border. Even though it's one of the upbringing from Abdulhamid II's rule, we can still utilize them to our needs under a new name."
  TUR_tribal_light_cavalry_regiments_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nResistance Decay Speed: §G+10%§!\nIrregular Cavalry Attack: §G+10.00%§!\nIrregular Cavalry Defense: §G+10.00%§!\n\n"
+ TUR_tribal_light_cavalry_regiments_tt2:0 "Modify template cap of §YHamidiye Alayı§! by §G+14§!."
  TUR_utilize_gendarmerie:0 "Utilize Gendarmerie"
  TUR_utilize_gendarmerie_desc:0 "Gendarmerie has remained as a disconnected police force from our army. But there's much room to gain from integrating these rural police forces into our army."
  TUR_utilize_gendarmerie_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£manpower_texticon  Recruitable Population: §G5%§!\nDivision Recovery Rate: §G+5.0%§!\nDamage to Garrisons: §G-10.00%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §R-0.001%§! \n\n"
@@ -4745,6 +4746,7 @@
  TUR_form_cossack_units:0 "Form Cossack Units"
  TUR_form_cossack_units_desc:0 "Cossack units are fierce enemies on the battle front. As we have our own similar irregular cavalry Hamidiye units, it'll be easy for us to emulate Russian Cossack units and create our own fighting force."
  TUR_form_cossack_units_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£attack_cavalry_texticon  Cavalry Attack: §G+10.0%§!\n£defence_cavalry_texticon  Cavalry Defense: §G+5.0%§!\n\nCreates a division template named §YRus Kossak Birlikleri§!."
+ TUR_form_cossack_units_tt2:0 "Modify template cap of §YHamidiye Alayı§! by §G+7§!."
  TUR_cooperation_in_desert_warfare:0 "Cooperation in Desert Warfare"
  TUR_cooperation_in_desert_warfare_desc:0 "While our empire has entrenched us in the Arabian desert, foreign powers like Britain see more success in taming the desert. Perhaps we can ask our allies to assist us in desert warfare."
  TUR_cooperation_in_desert_warfare_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£attrition_hot_texticon  Heat Attrition: §G-10.0%§!\n£out_of_supply_texticon  Non-Combat Out of Supply Penalties: §G-15.0%§!\n£temperature_hot_texticon  Hot acclimatization gain factor: §G+20.0%§!\n\nDeploys 8 §YHercin Süvari Tümeni§!."
@@ -5046,6 +5048,10 @@
  TUR_end_of_an_era:0 "End of an Era"
  TUR_end_of_an_era_desc:0 "Our gamble to join the Great War has been proven to be a mistake. Even before the war, our empire was in a trend of collapsing. Though we've joined the war with the hopes of victory and securing the future of the empire, it has proven to be a fatal mistake. It's not a long time untill the sick man turns into a hollow corpse, with a future at the hands of those who defeated it preparing to divide its terrotires yet into more colonies."
  TUR_end_of_an_era_tt:0 "This focus will automatically be completed if we're §Ydefeated§! in the §YGreat War§!"
+
+ TUR_appoint_cemal_mersinli_tt:0 "[TUR.GetFlag]§Y[TUR.GetName]§!:\n§YMehmed Cemal Paşa§!([TUR.GetFlag]) Joins §Y[TRS.GetNameDef]§!\n§YMehmed Cemal Paşa§! becomes a Chief of Army with the effect:\n£army_experience  Army Experience Gain: §G+0.20§! daily\n£attack_texticon  Division Attack: §G+5.0%§!\n"
+ TUR_defense_of_syria_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Add Defense Skill §G1§!"
+ TUR_prepare_for_the_egyptian_expedition_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Joins §Y[TUR.GetNameDef]§!"
 
  FRA_ww1_dreyfus_exoneration:0 "Dreyfus Exoneration Aftermath"
  FRA_ww1_dreyfus_exoneration_desc:0 "Exempt since 1906, Alfred Dreyfus is still at the heart of the political debate. It is time to close this painful parenthesis of the 3rd Republic."
