--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -507,3 +507,4 @@
  TUR_policy_executer:0 "Policy Executor"
  judicial_reformer:0 "Judicial Reformer"
  TUR_uncrowned_king:0 "Uncrowned King"
+ railway_engineer:0 "Railway Engineer"
