--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -335,6 +335,13 @@
  RUS_polish_zemstvo: "Introduce Zemstvo in Poland"
  RUS_autonomy_for_poland: "Autonomy for Poland"
  RUS_abolish_pale_of_settlement: "Emancipation of Jews"
+ RUS_persian_campaign: "Persian campaign"
+ RUS_support_mohammed_ali_shah: "Support for Muhammad Ali Shah"
+ RUS_invasion_of_persia: "Invasion of Persia"
+ RUS_declaration_with_china: "Declaration with China"
+ RUS_protectorate_of_tuva: "Protectarate over Tuva"
+ RUS_demand_armenian_reforms: "Demand for the Armenian reforms"
+ RUS_unity_of_the_entente: "The unity of the Entente"
 
 
  # Focus Filters
@@ -450,6 +457,8 @@
  ww1_russian_empire.29.d: ""
  ww1_russian_empire.29.a: "I couldn't agree more with Maklakov"
  ww1_russian_empire.29.b: "Krivoshein's economic agenda is what we need"
+ ww1_russian_empire.30.t: "Persia rejects the ultimatum"
+ ww1_russian_empire.30.a: "An invasion is an invasion"
 
  # State Duma and State Council
  RUS_parliament_title: "State Duma"
@@ -593,12 +602,49 @@ RUS_armenian_reforms_crisis_plus_500: "Diplomatic effort"
 RUS_armenian_reforms_crisis_plus_1500: "Show of force in Caucasus"
 RUS_armenian_reforms_crisis_plus_3000: "Support Armenian groups"
 GER_armenian_reforms_crisis_plus_1500: "Diplomatic effort"
-GER_armenian_reforms_crisis_plus_1000: "to show the superiority of powers"
+GER_armenian_reforms_crisis_plus_1000: "To show the superiority of powers"
 GER_armenian_reforms_crisis_plus_3000: "Support Turkish goverment"
 RUS_plus_30_tt: "§Y30%§! is added"
 RUS_plus_5_tt: "§Y5%§! is added"
 RUS_plus_15_tt: "§Y15%§! is added"
 RUS_plus_10_tt: "§Y10%§! is added"
 TUR_armenian_autonoums: "Armenian autonomy"
-TUR_puppet_mission: "implementation of Armenian reforms"
+TUR_puppet_mission: "Implementation of Armenian reforms"
 TUR_puppet_decision: "Release Armenian autonomy"
+
+#Persian events
+
+ww1_persia.14.t: "Mohammad Ali Shah's Uprising"
+ww1_persia.14.a: "Begin Suppression of the Uprising"
+ww1_persia.15.t: "Ultimatum from Russia"
+ww1_persia.15.a: "Refuse the Ultimatum"
+ww1_persia.15.b: "Comply with the Ultimatum"
+ww1_persia.16.t: "Capitulation of Persia"
+ww1_persia.16.a: "A new era begins"
+ww1_persia.17.t: "Peace with Russia"
+ww1_persia.17.a: "Accept the terms and end the conflict"
+
+#Armenian Reforms events
+
+ww1_aremenian_reforms.1.t: "Beginning of Armenian Reforms crisis"
+ww1_aremenian_reforms.1.a: "Let's go"
+ww1_aremenian_reforms.2.t: "Ends of crisis"
+ww1_aremenian_reforms.2.a: "Ura tovarishi"
+ww1_aremenian_reforms.3.t: "Russia asks for Armenian reforms"
+ww1_aremenian_reforms.3.a: "Accept reforms"
+ww1_aremenian_reforms.3.b: "Ask for help from Germany"
+ww1_aremenian_reforms.4.t: "Turkey asks for help"
+ww1_aremenian_reforms.4.a: "Start negotiating"
+ww1_aremenian_reforms.4.b: "Not to support Turkey"
+ww1_aremenian_reforms.5.t: "Declaration of war on Turkey"
+ww1_aremenian_reforms.5.a: "For our Armenian brothers"
+
+#China declaration
+ww1_china_declaration.1.t: "Russia asks for guarantees of Mongolia's autonomy"
+ww1_china_declaration.1.a: "We agree"
+ww1_china_declaration.1.b: "We disagree"
+ww1_china_declaration.2.t: "China rejects the declaration"
+ww1_china_declaration.2.a: "We'll be alone."
+ww1_china_declaration.2.b: "We don't care about Mongolia."
+ww1_china_declaration.3.t: "Annexation of Uryankhai Krai"
+ww1_china_declaration.3.a: "Welcome home"
