--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1498,6 +1498,8 @@ FRA_german_reparations:0 "German Reparations"
  FRA_interim_government:0 "Interim Government"
  FRA_interim_government_desc:0 "The Interim Government of All French was formed after the defeat in the Battle of France. Installed with total disregard for constitutional law and order, the Transitional Government is respected by no one, not even the Germans who caused it. But it is at least the only bargaining chip that could save them from the flames of the Great War. France is obliged to be called to the peace table after the German total victory at the end of the war."
  FRA_interim_government_tt:0 "§RCan't join any ally with §YInterim Government§! idea§!"
+ FRA_communard_spirit:0 "Communard Spirit"
+ FRA_communard_spirit_desc:0 "We are the legacy of the Paris Commune, the first socialist state ever created and then brutally repressed by the Republican reactionaries. The workers finally got their revenge and overthrew the military junta of the 'Party of Order'. We, sons and daughters of Communards must protect our state and our spirit, we will not be commanded by tyrants anymore!"
 
  sncf:0 "SNCF"
  rhone_poulenc:0 "Rhône-Poulenc"
@@ -1665,6 +1667,9 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  GER_idea_default_tt:0 "§YReparation Paying is all stopped and you'll have no modifiers affected on by the Reparation idea.§!"
  GER_idea_hyperinflation:0 "Hyperinflation"
  GER_idea_naval_arms_race_desc:0 "More dreadnoughts! Bigger guns!"
+ GER_imperial_pride:0 "Deutsches Weltreich"
+ GER_imperial_pride_desc:0 "The German Empire is at the top of the world. Its rivals and enemies have fallen to revolution, surrendered their empires, or gone into steep decline. All of the roads of this new world lead to Berlin - the economic, cultural and political heart of Europe. Our mission is to defend this new world with all of our might - as our enemies are numerous."
+
  OST_colonial_question:0 "Colonial Question"
  OST_colonial_question_desc:0 "The amount of manpower our land based arm can recruit is severely limited. Strict regulations regarding foreign nationals joining, and a general lack of willingness by the natives, stifles our attempt to build a larger force."
  OST_Protecting_GER_interest:0 "Protecting German Interests"
@@ -1721,6 +1726,10 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  bouhagier_patras:0 "Bouhagier Patras"
  bouhagier_patras_desc:0 "Bouhagier Patras"
  has_invested_in_bouhagier_patras:0 "Has Invested In Bouhagier Patras"
+ AUH_financial_ties_broken:0 "Austro-Hungarian Ties Broken"
+ AUH_financial_ties_broken_desc:0 "The Crown of Hungary refuses to pay their taxes into the common coffers for the common ministries.
+ AUH_vienna_circle:0 "The Vienna Circle"
+ AUH_vienna_circle_desc:0 "he Vienna Circle is a group of philosophers and scientists, drawn from the natural and social sciences, logic and mathematics, who have met regularly at the University of Vienna since.\n\nThe central thought behind their activities was "Exact Thinking on the Edge of Doom"."
  
  
 
@@ -1802,6 +1811,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  SER_russian_protection:0 "Russian Protection"
  SER_russian_protection_desc:0 "Our relationship with Russia is special in that we are fellow Slavic and Orthodox nations. Russia values our geopolitical position, which stretches from the Balkans to the Mediterranean, so they will actively help us if we are in a crisis."
  SER_russian_protection_tt:0 "§Y[RUS.GetFlag]Russia§! would §Rjoin war§! when §Y[SER.GetFlag]Serbia§! is §Yat defensive war with a major country§!.\nIf either of both undergoes a political change that enough to break ties, this national spirit will disappear."
+ SER_scarred_nation:0 "Scarred Nation"
+ SER_scarred_nation_desc:0 "Serbia suffered more than any other country in the Great War. Entire towns were depopulated, the country looted, hundreds of thousands died - and the ordinary Serb believes it was their fault."
 
  #MEXICO
  MEX_idea_porfiriato:0 "Porfiriato"
