committee member research

--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -163,3 +163,5 @@
  ITA_modernized_cavalry_tech:0 "Modernized Cavalry"
  ITA_savari_tech:0 "Savari"
  TUR_camelry_recon:0 "Camelry Recon"
+ TUR_committee_research_bonus_name:0 "Committee Member Research Adoption"
+ TUR_committee_research_bonus_desc:0 "Since we're a Committee member with a high degree of autonomy, we get research bonus from our fellow Committee members."
