adding army focus effects

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2467,6 +2467,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_clash_against_armenian_gangs_tt2:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n"
  TUR_exterminate_armenians:0 "Exterminate Armenians in [FROM.GetName]"
  TUR_exterminate_armenians_desc:0 "There are several towns and villages that accompany a large Armenian population in [FROM.GetName]. By marching them through desert while effectively decreasing their numbers, we can create an ethnically homogenious society."
+ TUR_usurp_assyrian_properties:0 "Usurp Assyrian Properties"
+ TUR_usurp_assyrian_properties_desc:0 "While our eastern lands don't have much to offer, the little they have are being owned by Christians. By confiscating their properties, we can decrease their influence."
+ TUR_usurp_assyrian_properties_tt:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
  TUR_lift_the_mutasarrifate_of_catalca:0 "Lift the Mutasarrifate of Çatalca"
@@ -2993,10 +2996,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_third_faction_civilian_struggle_third_faction_low_control:0 "Low Third Faction Influence"
  TUR_local_central_rule:0 "Local-Central Committee Influence"
  TUR_local_central_rule_balanced:0 "Balanced Influence"
- TUR_local_central_rule_local:0 "Local Committee"
- TUR_local_central_rule_local_high_control:0 "High Local Committee Influence"
- TUR_local_central_rule_local_medium_control:0 "Medium Local Committee Influence"
- TUR_local_central_rule_local_low_control:0 "Low Local Committee Influence"
+ TUR_local_central_rule_local:0 "Committee Member"
+ TUR_local_central_rule_local_high_control:0 "High Committee Member Influence"
+ TUR_local_central_rule_local_medium_control:0 "Medium Committee Member Influence"
+ TUR_local_central_rule_local_low_control:0 "Low Committee Member Influence"
  TUR_local_central_rule_central:0 "Central Committee"
  TUR_local_central_rule_central_high_control:0 "High Central Committee Influence"
  TUR_local_central_rule_central_medium_control:0 "Medium Central Committee Influence"
