--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4930,7 +4930,10 @@
  TUR_arrest_armenian_agitators_tt1:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n\n"
  TUR_arrest_armenian_agitators_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n\n"
  TUR_arrest_armenian_agitators_tt3:0 "Modify £ww1_flag_GEO  §YGeorgian Minority§! by\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n\n"
- TUR_arrest_armenian_agitators_tt4:0 "Unlocks £decision_icon_small §YClash Against Armenian Gangs§! Decisions."
+ TUR_arrest_armenian_agitators_tt4:0 "Modify £ww1_flag_ASY  §YAssyrian Minority§! by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
+ TUR_arrest_armenian_agitators_tt5:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
+ TUR_arrest_armenian_agitators_tt6:0 "Unlocks £decision_icon_small §YClash Against Armenian Gangs§! Decisions.\nUnlocks £decision_icon_small §YUsurp Assyrian Properties§! Decisions.\n"
+ TUR_arrest_armenian_agitators_tt7:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
  TUR_temporary_law_of_deportation:0 "Temporary Law of Deportation"
  TUR_temporary_law_of_deportation_desc:0 "Our non-Muslim Christian populations in bordering regions possess great threat if we engage in war with neighboring countries. As the presence of Armenians, Assyrians and other Christians are already against the type of state we've envisioned to create, this threat is the perfect opportunity to blame everything on such minorities and forcefully relocate them from their hometowns in order to Turkify the region from its minorities."
  TUR_temporary_law_of_deportation_tt:0 "Unlocks £decision_icon_small §YDepopulate Armenia§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks £decision_icon_small §YDepopulate Assyria§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
@@ -5048,7 +5051,8 @@
  TUR_end_of_an_era:0 "End of an Era"
  TUR_end_of_an_era_desc:0 "Our gamble to join the Great War has been proven to be a mistake. Even before the war, our empire was in a trend of collapsing. Though we've joined the war with the hopes of victory and securing the future of the empire, it has proven to be a fatal mistake. It's not a long time untill the sick man turns into a hollow corpse, with a future at the hands of those who defeated it preparing to divide its terrotires yet into more colonies."
  TUR_end_of_an_era_tt:0 "This focus will automatically be completed if we're §Ydefeated§! in the §YGreat War§!"
-
+ 
+ TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\nArmy Experience Gain: §G+0.01§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
  TUR_appoint_cemal_mersinli_tt:0 "[TUR.GetFlag]§Y[TUR.GetName]§!:\n§YMehmed Cemal Paşa§!([TUR.GetFlag]) Joins §Y[TRS.GetNameDef]§!\n§YMehmed Cemal Paşa§! becomes a Chief of Army with the effect:\n£army_experience  Army Experience Gain: §G+0.20§! daily\n£attack_texticon  Division Attack: §G+5.0%§!\n"
  TUR_defense_of_syria_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Add Defense Skill §G1§!"
  TUR_prepare_for_the_egyptian_expedition_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Joins §Y[TUR.GetNameDef]§!"
